fix: front-matter description spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -317,6 +317,7 @@ h3.description {
   font-weight: 200;
   padding-bottom: 1rem;
   line-height: 140%;
+  margin-top: 0px;
 }
 
 #__docusaurus
